themes/osuosl/assets/css/style.css
@font-face {
    font-family: 'Stratum';
    src: url('/fonts/Stratum2-Black.otf') format('opentype');
    font-weight: 900;
    font-style: normal;
}
@font-face {
    font-family: 'Stratum';
    src: url('/fonts/Stratum2-Medium.otf') format('opentype');
    font-weight: 500;
    font-style: medium;
}
@font-face {
    font-family: 'Kievit';
    src: url('/fonts/KievitOffc.ttf') format('truetype');
    font-weight: 400;
    font-style: normal;
}
@font-face {
    font-family: 'Kievit';
    src: url('/fonts/KievitOffc-Bold.ttf') format('truetype');
    font-weight: 700;
    font-style: bold;
}

body {
    font-family: 'Kievit', sans-serif;
    font-size: 18px;
    margin: 0;
}

main {
    padding-left: 85px;
    padding-right: 85px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    color: #D73F09;
    font-family: 'Stratum', sans-serif;
    margin: 0 0 1.25rem;
}

h1 {
    font-size: 2rem;
    margin-top: 15px;
}

h2 {
    font-size: 2rem;
}

h3 {
    font-size: 1.25rem;
}

h4 {
    font-size: 1.125rem;
}

h5 {
    font-size: 1rem;
}

h6 {
    font-size: 1rem;
}

a {
    color: #D73F09;
}

ul li {
    list-style-image: url(https://communications.oregonstate.edu/sites/all/themes/doug_fir/images/bullet.png);
    margin-bottom: 6px;
}

button {
    font-size: 100%;
    vertical-align: middle;
    cursor: pointer;
}

textarea {
    overflow: auto;
    vertical-align: top;
    height: auto;
}

.mobile-menu-container {
    display: none;
}

.header {
    display: block;
}

.header-container {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    background: #D73F09;
}

.logo-container {
    margin: 10px;
    margin-left: 20px;
}

.logo {
    max-height: 100px;
}

.subheader-container {
    padding: 10px;
}

.subheader-container,
.subheader-container a {
    background: black;
    color: white;
    text-decoration: none;
    font-size: 20px;
}

.logo-divider {
    font-size: 15px;
}

.osl-logo-link {
    font-weight: bold;
}

.search-modal {
    display: none;
}

.search-modal.show {
    display: flex;
    flex-direction: column;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.5);
    z-index: 1000;
    align-items: center;
    justify-content: center;
}

.search-modal.hide {
    display: none;
}

.search-headers {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.close-search {
    height: fit-content;
    border: none;
    background: white;
}

.close-search i {
    font-size: x-large;
}

.search-modal-container {
    background: white;
    width: 56rem;
    height: 90vh;
    overflow: scroll;
    margin: 50px;
    padding: 20px;
}

.open-search {
    border-radius: 10px;
    border-style: none;
    padding: 5px;
    margin: 1em;
    height: 33px;
    width: 40px;
    cursor: pointer;
    color: white;
    background: none;
}

.open-search:hover {
    background: black;
}

/* 
    Main menu
    source: Hugo mainroad theme
*/
.mobile-menu {
    display: none;
}

.no-js .menu__btn {
    display: none;
}

.menu__btn {
    display: block;
    width: 100%;
    padding: 0;
    font: inherit;
    background: #fff;
    color: #2a2a2a;
    border: 0;
    outline: 0;
}

.menu__btn-title {
    position: relative;
    display: block;
    padding: 10px 15px;
    padding: .625rem .9375rem;
    text-align: right;
    text-transform: uppercase;
    cursor: pointer;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    -o-user-select: none;
    user-select: none;
}

button:not(:-moz-focusring):focus>.menu__btn-title {
    box-shadow: none;
}

.menu__btn:focus,
.menu__btn-title:focus {
    outline: 0;
}

.menu__list {
    list-style: none;
    background: #fff;
    position: relative;
    margin-bottom: 10px;
    margin-top: 10px;
    display: flex;
    padding: 0;
}

.menu__list li {
    list-style-image: none;
}

.menu__item:hover {
    background-color: rgba(0, 0, 0, 0.9);
    color: #fff;
}

.menu__item:first-child {
    border: 0;
}

.menu__link {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding: 5px 10px;
    padding: .4rem .9375rem;
    color: #000;
    text-transform: uppercase;
    text-decoration: none;
}

.dropdown__arrow {
    position: absolute;
    right: 0;
    margin-right: 15px;
}

.dropdown__content {
    display: none;
    position: absolute;
    background-color: rgba(0, 0, 0, 0.9);
    color: #fff;
    min-width: 250px;
    max-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
    z-index: 1;
}

.submenu__text {
    color: #fff;
    text-transform: none;
    padding: 0;
    font-size: 14px;
    display: block;
    width: 100%;
}

.thirdmenu__text {
    color: #fff;
    text-transform: none;
    padding: 0;
    font-size: 14px;
}

.submenu__link {
    margin: 1px;
}

.thirdmenu__link {
    margin: 0px;
    margin-left: 15px;
}

.submenu__list {
    list-style: none;
    padding: 0;
}

.thirdmenu__list {
    list-style: none;
    padding: 0;
}

.menu__item:hover .dropdown__content {
    display: flex;
    flex-direction: column;
}

.menu__dropdown:hover .menu__link {
    color: #fff;
}

.submenu__item:hover .third__dropdown {
    display: flex;
    flex-direction: column;
}

.menu__link:hover {
    color: #fff;
}

.menu__item:hover .menu__link {
    color: #fff;
}

.js .menu__list {
    position: absolute;
    z-index: 1;
    width: 100%;
    visibility: hidden;
    -webkit-transform: scaleY(0);
    transform: scaleY(0);
    -webkit-transform-origin: top left;
    transform-origin: top left;
}

.js .menu__list--active {
    visibility: visible;
    border-top: 1px solid rgba(255, 255, 255, .1);
    border-bottom: 1px solid rgba(255, 255, 255, .1);
    -webkit-transform: scaleY(1);
    transform: scaleY(1);
}

.menu__list--transition {
    transition: visibility .15s ease, transform .15s ease, -webkit-transform .15s ease;
}

.main-menu {
    padding-left: 85px;
    padding-right: 85px;
}
/* ... */

